# mlx

./: .clang-format 2  .clangd  .gitignore  .pre-commit-config.yaml  ACKNOWLEDGMENTS.md  CITATION 2.cff  CMakeLists.txt  CODE_OF_CONDUCT 2.md  CODE_OF_CONDUCT.md  CONTRIBUTING 2.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  bench_conv.py  benchmark_llm_rocm.py  benchmark_mamba.py  benchmark_radix_select.py  benchmark_results 2.json  benchmark_results.json  dynamic_backend_proposal.md  e.py  jaccl_benchmark.json  m5_max_bench_cpu_20260404_121640.json  m5_max_bench_gpu_20260404_121622.json  m5_max_bench_gpu_20260404_130556.json  m5_max_results.json  mlx.pc 2.in  mlx.pc.in  pyproject 2.toml  pyproject.toml  quick_muon_test.py  run_benchmarks.sh  run_muon_benchmarks.sh  scaling_benchmark_standalone 2.json  scaling_benchmark_standalone.json  setup.py  (+12 more)
benchmarks/cpp/: CMakeLists.txt  autograd.cpp  bench_mla_nope_scores.cpp  cholesky.cpp  collectives_bench.cpp  compare_devices.cpp  irregular_strides.cpp  single_ops.cpp  time_utils.h
examples/cmake_project/: CMakeLists.txt  README.md  example.cpp
examples/cpp/: CMakeLists.txt  distributed.cpp  linear_regression.cpp  logistic_regression.cpp  metal_capture.cpp  qqmm.cu  timer.h  tutorial.cpp
examples/export/: CMakeLists.txt  README.md  eval_mlp.cpp  eval_mlp.py  train_mlp.cpp  train_mlp.py
examples/extensions/: CMakeLists.txt  README.md  bindings.cpp  pyproject.toml  requirements.txt  setup.py  test.py
examples/extensions/axpby/: axpby.cpp  axpby.h  axpby.metal
examples/extensions/mlx_sample_extensions/: __init__.py
mlx/: CMakeLists.txt  allocator.cpp  allocator.h  api.h  array.cpp  array.h  autograd_state.cpp  autograd_state.h  compile.cpp  compile.h  compile_impl.h  device.cpp  device.h  device_info.cpp  device_info.h  dtype.cpp  dtype.h  dtype_utils.cpp  dtype_utils.h  einsum.cpp  einsum.h  event.h  export.cpp  export.h  export_impl.h  extensions.cpp  extensions.h  failure.cpp  failure.h  fast.cpp  fast.h  fast_primitives.h  fence.h  fft.cpp  fft.h  graph.cpp  graph.h  graph_utils.cpp  graph_utils.h  io.h  (+32 more)
mlx/backend/accelerate/: CMakeLists.txt  conv.cpp  conv_transpose.cpp  matmul.cpp  primitives.cpp  quantized.cpp  reduce.cpp  softmax.cpp  unary_ops.h  utils.h
mlx/backend/common/: CMakeLists.txt  arange.h  arg_reduce.cpp  binary.cpp  binary.h  binary_ops.h  binary_two.h  broadcasting.cpp  broadcasting.h  buffer_cache.h  cholesky.cpp  common.cpp  compiled.cpp  compiled.h  compiled_cpu.cpp  compiled_nocpu.cpp  compiled_preamble.h  conv.cpp  conv_transpose.cpp  copy.cpp  copy.h  cpu_impl.cpp  cpu_impl.h  default_primitives.cpp  eigh.cpp  eigvalsh.cpp  erf.cpp  erf.h  fft.cpp  gemm.h  hadamard.cpp  hadamard.h  indexing.cpp  inverse.cpp  jit_compiler.cpp  jit_compiler.h  lapack.h  lapack_helper.h  load.cpp  load.h  (+40 more)
mlx/backend/cpu/: CMakeLists.txt  arange.h  arg_reduce.cpp  available.cpp  available.h  binary.cpp  binary.h  binary_ops.h  binary_two.h  cholesky.cpp  compiled.cpp  compiled_preamble.h  conv.cpp  copy.cpp  copy.h  device_info.cpp  device_info.h  distributed.cpp  eig.cpp  eigh.cpp  encoder.cpp  encoder.h  eval.cpp  eval.h  fft.cpp  gemm.h  hadamard.cpp  highway_utils.h  indexing.cpp  inverse.cpp  jit_compiler.cpp  jit_compiler.h  lapack.h  logsumexp.cpp  luf.cpp  make_compiled_preamble.ps1  make_compiled_preamble.sh  masked_mm.cpp  matmul.cpp  norms.cpp  (+35 more)
mlx/backend/cuda/: CMakeLists.txt  allocator.cpp  allocator.h  arange.cu  arg_reduce.cu  bin2h.cmake  binary.cu  binary_two.cu  common.h  compiled.cpp  conv.cpp  copy.cpp  copy.cu  cublas_utils.cpp  cublas_utils.h  cuda.cpp  cuda.h  cuda_utils.h  cudnn_utils.cpp  cudnn_utils.h  custom_kernel.cpp  cutlass_utils.cuh  delayload.cpp  detect_cuda_arch.sh  device.cpp  device.h  device_info.cpp  dirs.cpp  distributed.cu  dllmain.cpp  dtype_utils.cuh  eval.cpp  event.cu  event.h  fence.cpp  fence.cu  fft.cu  gather.cu  gather_axis.cu  gemv.cu  (+47 more)
mlx/backend/gpu/: CMakeLists.txt  available.h  copy.cpp  copy.h  device_info.cpp  device_info.h  eval.h  failure.h  primitives.cpp  reshape.cpp  reshape.h  scan.h  slicing.cpp  slicing.h
mlx/backend/io/: CMakeLists.txt  io_impl.cpp  io_impl.h  primitives.cpp  (+2 more)
mlx/distributed/: CMakeLists.txt  distributed.cpp  distributed.h  distributed_impl.cpp  distributed_impl.h  no_cpu.cpp  no_distributed.cpp  ops.cpp  ops.h  primitives.cpp  primitives.h  reduction_ops.h  utils.cpp  utils.h
mlx/io/: CMakeLists.txt  gguf.cpp  gguf.h  gguf_quants.cpp  json.cpp  json.h  load.cpp  load.h  no_gguf.cpp  no_safetensors.cpp  safetensor.cpp  safetensor.h  safetensors.cpp  threadpool.h
mlx/types/: bf16.h  bf8.h  complex.h  fp16.h  fp8.h  half_types.h  limits.h  quarter_types.h
python/src/: CMakeLists.txt  array.cpp  array.h  buffer.h  constants.cpp  convert.cpp  convert.h  cuda.cpp  device.cpp  dist.cpp  distributed.cpp  dlpack_consumer.cpp  dlpack_consumer.h  dlpack_consumer_metal.cpp  dlpack_consumer_no_metal.cpp  dlpack_format.h  export.cpp  extensions.cpp  fast.cpp  fft.cpp  indexing.cpp  indexing.h  linalg.cpp  load.cpp  load.h  memory.cpp  metal.cpp  mlx.cpp  mlx_func.cpp  mlx_func.h  ops.cpp  overloaded.h  print.cpp  pybind11_numpy_fp16.h  random.cpp  random.h  rocm.cpp  small_vector.h  stream.cpp  transforms.cpp  (+4 more)
tests/: CMakeLists.txt  allocator_tests.cpp  arg_reduce_tests.cpp  array_tests.cpp  autograd_tests.cpp  blas_tests.cpp  bounds_checks_tests.cpp  compile_tests.cpp  creations_tests.cpp  custom_vjp_tests.cpp  device_tests.cpp  einsum_tests.cpp  eval_tests.cpp  exception_tests.cpp  export_import_tests.cpp  fast_tests.cpp  fft_tests.cpp  gpu_tests.cpp  graph_optimize_tests.cpp  jaccl_tests.cpp  linalg_qr_tests.cpp  linalg_tests.cpp  load_tests.cpp  metal_buffer_lifetime_tests.cpp  metal_completed_handler_repro.mm  metal_tests.cpp  metal_thread_safety_tests.cpp  ops_tests.cpp  random_tests.cpp  scheduler_tests.cpp  sparse_tests.cpp  test_jaccl_split.py  test_metal_svd.cpp  test_ops_tests.cpp  test_teardown.cpp  tests.cpp  thread_pool_tests.cpp  utils_tests.cpp  vmap_tests.cpp
(+1145 files in other folders)
